Fix spacing in flyout menu and added reload after payment

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ body {
     flex-direction: column;
     /* Stack items vertically */
     gap: 5px;
+    padding-top: 10px;
 }
 
 .add-container input,
